syntax = "proto3";

package loco.workspace.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

option go_package = "github.com/team-loco/loco/shared/proto/workspace/v1;workspacev1";

// WorkspaceService manages workspaces and their members.
service WorkspaceService {
  // CreateWorkspace creates a new workspace.
  rpc CreateWorkspace(CreateWorkspaceRequest) returns (CreateWorkspaceResponse);
  // GetWorkspace retrieves a workspace by ID.
  rpc GetWorkspace(GetWorkspaceRequest) returns (GetWorkspaceResponse);
  // UpdateWorkspace updates workspace information.
  rpc UpdateWorkspace(UpdateWorkspaceRequest) returns (UpdateWorkspaceResponse);
  // DeleteWorkspace deletes a workspace and optionally its resources.
  rpc DeleteWorkspace(DeleteWorkspaceRequest) returns (DeleteWorkspaceResponse);

  // ListUserWorkspaces lists all workspaces for a user.
  rpc ListUserWorkspaces(ListUserWorkspacesRequest) returns (ListUserWorkspacesResponse);
  // ListOrgWorkspaces lists all workspaces in an organization.
  rpc ListOrgWorkspaces(ListOrgWorkspacesRequest) returns (ListOrgWorkspacesResponse);

  // CreateMember adds a user to a workspace with a specified role.
  rpc CreateMember(CreateMemberRequest) returns (CreateMemberResponse);
  // DeleteMember removes a user from a workspace.
  rpc DeleteMember(DeleteMemberRequest) returns (DeleteMemberResponse);
  // ListWorkspaceMembers lists all members of a workspace with pagination.
  rpc ListWorkspaceMembers(ListWorkspaceMembersRequest) returns (ListWorkspaceMembersResponse);
}

// Workspace represents a project container within an organization where resources are deployed and managed.
message Workspace {
  int64                     id          = 1;
  int64                     org_id      = 2;
  string                    name        = 3;
  string                    description = 4;
  int64                     created_by  = 5;
  google.protobuf.Timestamp created_at  = 6;
  google.protobuf.Timestamp updated_at  = 7;
}

// WorkspaceMember represents a user's membership and role assignment in a workspace.
message WorkspaceMember {
  int64                     workspace_id = 1;
  int64                     user_id      = 2;
  string                    role         = 3;
  google.protobuf.Timestamp created_at   = 4;
}

// WorkspaceMemberWithUser includes user details along with membership information for convenient retrieval.
message WorkspaceMemberWithUser {
  int64                     workspace_id    = 1;
  int64                     user_id         = 2;
  string                    role            = 3;
  google.protobuf.Timestamp created_at      = 4;
  string                    user_name       = 5;
  string                    user_email      = 6;
  string                    user_avatar_url = 7;
}

// CreateWorkspaceRequest is the request to create a new workspace.
message CreateWorkspaceRequest {
  int64           org_id      = 1;
  string          name        = 2;
  optional string description = 3;
}

// CreateWorkspaceResponse is the response containing the created workspace ID.
message CreateWorkspaceResponse {
  int64 workspace_id = 1;
}

// GetWorkspaceRequest is the request to retrieve a workspace.
message GetWorkspaceRequest {
  int64 workspace_id = 1;
}

// GetWorkspaceResponse is the response containing the workspace.
message GetWorkspaceResponse {
  Workspace workspace = 1;
}

// ListUserWorkspacesRequest is the request to list workspaces for a user.
message ListUserWorkspacesRequest {
  int64 user_id = 1;
  int32 page_size = 2;  // default: 50, max: 200
  string page_token = 3; // cursor from previous page (base64-encoded timestamp+id)
}

// ListUserWorkspacesResponse contains the list of user's workspaces.
message ListUserWorkspacesResponse {
  repeated Workspace workspaces = 1;
  string next_page_token = 2; // empty if no more pages
}

// ListOrgWorkspacesRequest is the request to list workspaces in an organization.
message ListOrgWorkspacesRequest {
  int64 org_id = 1;
  int32 page_size = 2;  // default: 50, max: 200
  string page_token = 3; // cursor from previous page (base64-encoded timestamp+id)
}

// ListOrgWorkspacesResponse contains the list of workspaces.
message ListOrgWorkspacesResponse {
  repeated Workspace workspaces = 1;
  string next_page_token = 2; // empty if no more pages
}

// UpdateWorkspaceRequest is the request to update a workspace.
message UpdateWorkspaceRequest {
  int64                     workspace_id = 1;
  google.protobuf.FieldMask update_mask  = 2;
  optional string           name         = 3;
  optional string           description  = 4;
}

// UpdateWorkspaceResponse is the response containing the updated workspace ID.
message UpdateWorkspaceResponse {
  int64 workspace_id = 1;
}

// DeleteWorkspaceRequest is the request to delete a workspace.
message DeleteWorkspaceRequest {
  int64 workspace_id        = 1;
  bool  confirm_delete_apps = 2;
}

// DeleteWorkspaceResponse is the response after deleting a workspace.
message DeleteWorkspaceResponse {}

// CreateMemberRequest is the request to add a member to a workspace.
message CreateMemberRequest {
  int64  workspace_id = 1;
  int64  user_id      = 2;
  string role         = 3;
}

// CreateMemberResponse is the response containing the workspace and user IDs.
message CreateMemberResponse {
  int64 workspace_id = 1;
  int64 user_id      = 2;
}

// DeleteMemberRequest is the request to remove a member from a workspace.
message DeleteMemberRequest {
  int64 workspace_id = 1;
  int64 user_id      = 2;
}

// DeleteMemberResponse is the response after removing a member from a workspace.
message DeleteMemberResponse {}

// ListWorkspaceMembersRequest is the request to list members of a workspace.
message ListWorkspaceMembersRequest {
  int64 workspace_id = 1;
  int32 page_size = 2;  // default: 50, max: 200
  string page_token = 3; // cursor from previous page (base64-encoded timestamp+id)
}

// ListWorkspaceMembersResponse contains the list of workspace members.
message ListWorkspaceMembersResponse {
  repeated WorkspaceMemberWithUser members = 1;
  string next_page_token = 2; // empty if no more pages
}
